Fix: aggiustata la struttura base (altezze, overflow, larghezze )

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,13 +2,9 @@
 /* MOBILE-S */
 
 @media screen and (min-width:600px) {
-    .sidebar {
-        width: 40%;
-    }
-    
-    .main {
-        width: 60%;
-    }
+
+  
+   
 }
 
 
@@ -25,12 +21,7 @@
 
 @media screen and (min-width:1100px) {
 
-    .sidebar {
-        width: 30%;
-    }
+    
 
-    .main {
-        width: 70%;
-    }
     
 }
